Solution to loading error

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/pokedex.loader.js";
       var config = {
-        dataUrl: buildUrl + "/pokedex.data.br",
-        frameworkUrl: buildUrl + "/pokedex.framework.js.br",
-        codeUrl: buildUrl + "/pokedex.wasm.br",
+        dataUrl: buildUrl + "/pokedex.data",
+        frameworkUrl: buildUrl + "/pokedex.framework.js",
+        codeUrl: buildUrl + "/pokedex.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Pokedex",
